--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,12 @@ html {
 .appointment_title{
     font-size: 30px !important;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
