--- a/src/app/admin/add-product/add-product.component.html
+++ b/src/app/admin/add-product/add-product.component.html
@@ -13,11 +13,13 @@
             <label for="name">Name</label>
             <input
               type="text"
-              class="form-control"
+              class="form-control  "
+               
               id="exampleInputEmail1"
               aria-describedby="emailHelp"
               placeholder="Enter Product Name"
               formControlName="name"
+              id="inputInvalid"
             />
             <small
               class="form-text text-muted err-msg"
@@ -115,8 +117,9 @@
           </fieldset>
 
           <button
+         
             type="submit"
-            class="btn btn-primary"
+            class="btn btn-primary  mb-4"
             [disabled]="!productForm.valid"
           >
             Submit
