--- a/src/app/layout/admin-layout/admin-layout.component.html
+++ b/src/app/layout/admin-layout/admin-layout.component.html
@@ -11,9 +11,9 @@
        
       
        <li><a [routerLink]="['/admin/all-appointments/']" [routerLinkActive]="['active']"> <i class="fa fa-list"></i> All Appointments</a></li>
-       <li><a [routerLink]="['/admin/add-product']"> <i class="fa fa-star"></i> Add Product</a></li>
-       <li><a [routerLink]="['/admin/pending-appointments']"> <i class="fa fa-hourglass-start"></i> Edit Product</a></li>     
-       <li><a [routerLink]="['/admin/add-category']"> <i class="fa fa-hourglass-start"></i> Add Category</a></li>
+       <li><a [routerLink]="['/admin/add-product']"> <i class="fa fa-shopping-bag"></i> Add Product</a></li>
+       <li><a [routerLink]="['/admin/list-product']"> <i class="fa fa fa-list"></i> List Product</a></li>     
+       <li><a [routerLink]="['/admin/add-category']"> <i class="fa fa-deviantart" aria-hidden="true"></i>  Add Category</a></li>
        <li><a href="#contact">Contact</a></li>
        <li><a href="#followme">Follow me</a></li>
        </ul>
