--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -6,7 +6,7 @@
   <div class="row">
     
     <div class="mt-2 col-lg-6">
-      <img src="../../../assets/phone.jpg" class="img-fluid" />
+      <img src="../../../assets/phone.jpg" class="img-fluid d-none d-lg-block" />
     </div>
     <div class="mt-2 col-lg-6 from-container">
       <form
