--- a/src/app/layout/admin-layout/admin-layout.component.html
+++ b/src/app/layout/admin-layout/admin-layout.component.html
@@ -16,6 +16,7 @@
        <li><a [routerLink]="['/admin/add-category']"> <i class="fa fa-deviantart" aria-hidden="true"></i>  Add Category</a></li>
        <li><a href="#contact">Contact</a></li>
        <li><a href="#followme">Follow me</a></li>
+       <li><a (click)="logout()">Logout</a></li>
        </ul>
    </nav>
          <!-- /#sidebar-wrapper -->
