--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,7 +11,7 @@
   <h4 class="alert-heading">Account not found</h4>
   <p class="mb-0"><strong>Try Login with Standard User Account</strong></p>
 </div>
-<div class="container h-100">
+<div class="container h-100 mt-4">
   <div class="d-flex justify-content-center h-100">
     <div class="user_card">
       <div class="d-flex justify-content-center">
