--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,12 +32,10 @@
         </div>
       </nav>
       <div class="row m-4" id="mainBox">
-        <div
-          class="col-lg-12 d-flex justify-content-center"
-          id="mobileImageBox"
-        >
-          <img src="assets/Mobile-Download-PNG.png" class="img-fluid mx-auto mb-4" />
-
+        <div  class="col-lg-6 justify-content-end"  id="mobileImageBox" >
+          <img src="assets/Mobile-Download-PNG.png" class="img-fluid mx-auto mb-4" />          
+        </div>
+        <div class="col-lg-6" id="companyNameBox">
           <h2  id="companyName">DJ Mobile Garage</h2>
         </div>
       </div>
