--- a/src/app/user/dashboard/profile/profile.component.css
+++ b/src/app/user/dashboard/profile/profile.component.css
@@ -1,3 +1,45 @@
-/* .spinner{
-    width: 100%;
-} */
+ #photoSection{
+     position: relative;
+ }
+ #images{
+     position: absolute;
+    bottom: -30px;
+    left: 50px;
+    z-index: 100;
+    border: 5px solid wheat;
+    border-radius: 100%;
+
+ }
+#profile_detail_row{
+    height: 125px;
+    border-bottom: 7px solid rgb(134, 32, 32);
+}
+#profile_heading{
+     color: azure;
+}
+ @media screen and (max-width: 768px) {
+    #images{
+        position: absolute;
+        left: auto;
+        right: auto;
+
+    }
+    #profile_heading{
+        margin-top: 30px !important;
+       text-align: center !important;
+       
+    }
+    #details_row{
+        text-align: center !important;
+    }
+  }
+  h6,h5{
+      margin-bottom: 20px;
+  }
+  #address{
+      font-style: italic !important;
+  }
+
+  #email{
+      font-size: large;
+  }
