--- a/src/app/user/dashboard/profile/profile.component.html
+++ b/src/app/user/dashboard/profile/profile.component.html
@@ -1,1 +1,36 @@
+<div class="container" [ngStyle]="{ 'margin-top': '120px' }">
+    <div class="row bg-primary"  [ngStyle]="{ 'height':'200px'}">
+        <div class="col-12 d-flex justify-content-center" id="photoSection"> 
+            <img id="images" src="https://i.stack.imgur.com/gBMMe.png?s=328&g=1"  width="220" height="220" alt="" srcset="">
+        </div>
+         
+    </div>
+    <div class="row">
+        <div class="col-12">
 
+            <div class="row justify-content-end navbar-dark bg-dark " id="profile_detail_row"   >
+                <div class="col-md-12 mt-4">
+                    <h2 class="mt-3 mr-3 text-right" id="profile_heading"  >Profile Details</h2>
+                </div>
+            </div>
+
+            <div class="row mt-4 " id="details_row">
+                <div class="col-4">
+                    <h5><i class="fa fa-id-badge" aria-hidden="true"></i> Name</h5>
+                    <h5><i class="fa fa fa-envelope" aria-hidden="true"></i> Email</h5>
+                    <h5><i class="fa fa-mobile" aria-hidden="true"></i> Phone </h5>
+                    <h5><i class="fa fa-map-marker" aria-hidden="true"></i> Address</h5>
+                    
+                </div>
+                <div class="col-8">
+                    <h5>Arun Kumar</h5>
+                    <p id="email">arun@gmail.com</p>
+                    <h5>9599269070</h5>
+                     <h5><address  id="address">Extra 30/108 , Trilok puri ,Delhi</address></h5> 
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</div>
+hardCoded
